<resources>
    <string name="app_name" translatable="false">StoryApp</string>
    <string name="enter_email">masukkan email kamu</string>
    <string name="enter_password">masukkan password kamu</string>
    <string name="enter_name">masukkan nama kamu</string>
    <string name="login_now">Masuk Sekarang</string>
    <string name="login_detail_description">Silahkan isi data di bawah ini</string>
    <string name="register_detail_description">Silahkan lengkapi data di bawah ini untuk mendaftar</string>
    <string name="login">Masuk</string>
    <string name="password_error">Password tidak boleh kurang dari 6 karakter</string>
    <string name="email_error">Email tidak valid</string>
    <string name="register">Daftar</string>
    <string name="loading">Memuat</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Apakah kamu yakin ingin keluar dari akun ini?</string>
    <string name="cancel">Batalkan</string>
    <string name="exit_confirmation">Tekan lagi untuk keluar</string>
    <string name="story_content_description">Ini adalah foto yang diposting oleh orang - orang</string>
    <string name="story">story</string>
    <string name="avatar_content_description">Ini adalah avatar dari orang yang memposting foto ini</string>
    <string name="need_permission">Perlu Perizinan</string>
    <string name="need_permission_description">Beberapa perizinan dibutuhkan untuk menjalankan fitur.</string>
    <string name="ok">OK</string>
    <string name="write_caption">Tulis caption</string>
    <string name="upload_image">Unggah Gambar</string>
    <string name="story_picture_description">Ini adalah gambar dari cerita</string>
    <string name="logout_button_description">Ini adalah tombol logout button</string>
    <string name="upload_photo_description">ini adalah tombol upload foto</string>
    <string name="login_illustration_description">ini adalah gambar ilustrasi di halaman login</string>
    <string name="illustration_register_description">Ini adalah gambar ilustrasi di halaman register</string>
    <string name="camera_icon_description">Ini adalah ikon kamera</string>
    <string name="preview_image_picker_description">Ini adalah gambar preview</string>
    <string name="back_button_description">Ini adalah tombol untuk kembali ke halaman sebelumnya</string>
    <string name="app_widget_description">ini adalah StackView dari story</string>
    <string name="retry">Coba Lagi</string>
    <string name="maps_button_description">Ini untuk navigasi ke peta</string>
</resources>