<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login_page"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/illustration_login"
                android:layout_marginBottom="32dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/il_login"
                android:layout_width="match_parent"
                android:layout_height="280dp"/>

            <TextView
                android:text="@string/login_now"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginHorizontal="24dp"
                android:textSize="26sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/login_detail_description"
                android:textSize="14sp"
                android:layout_marginHorizontal="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"/>

            <dev.studiocloud.storyapp.ui.components.TextField
                android:id="@+id/ed_login_email"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <dev.studiocloud.storyapp.ui.components.TextField
                android:id="@+id/ed_login_password"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <dev.studiocloud.storyapp.ui.components.PrimaryButton
                android:id="@+id/pb_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:text="@string/login"
                tools:ignore="TextContrastCheck" />

            <dev.studiocloud.storyapp.ui.components.SecondaryButton
                android:id="@+id/sb_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/register"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>